--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -159,6 +159,12 @@
   <data name="Len8" xml:space="preserve">
     <value>Довжина повинна бути 8 символів</value>
   </data>
+  <data name="NameFromCap" xml:space="preserve">
+    <value>Повинне починатись з великої букви та складатись із латинських букв</value>
+  </data>
+  <data name="NameLen3To20" xml:space="preserve">
+    <value>Це поле повинне вміщувати від 3 до 20 символів</value>
+  </data>
   <data name="NameRequired" xml:space="preserve">
     <value>Потрібне ім'я</value>
   </data>
@@ -174,10 +180,55 @@
   <data name="SurnameRequired" xml:space="preserve">
     <value>Потрібне прізвище</value>
   </data>
+  <data name="SurnLen3To30" xml:space="preserve">
+    <value>Це поле повинне вміщувати від 3 до 30 символів</value>
+  </data>
   <data name="Template" xml:space="preserve">
     <value>Шаблон</value>
   </data>
   <data name="TypeIdRequired" xml:space="preserve">
     <value>Потрібен тип</value>
+  </data>
+  <data name="AccNumb" xml:space="preserve">
+    <value>Номер рахунку</value>
+  </data>
+  <data name="Amount" xml:space="preserve">
+    <value>Сума</value>
+  </data>
+  <data name="BackToList" xml:space="preserve">
+    <value>Назад до списку</value>
+  </data>
+  <data name="BirthDate" xml:space="preserve">
+    <value>Дата народження</value>
+  </data>
+  <data name="Client" xml:space="preserve">
+    <value>Клієнт</value>
+  </data>
+  <data name="Currency" xml:space="preserve">
+    <value>Валюта</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="ExpDate" xml:space="preserve">
+    <value>Дата закінчення дії</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Ім'я</value>
+  </data>
+  <data name="PIdNum" xml:space="preserve">
+    <value>Ідентифікаційний номер</value>
+  </data>
+  <data name="RegDate" xml:space="preserve">
+    <value>Дата реєстрації</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>Статус</value>
+  </data>
+  <data name="Surname" xml:space="preserve">
+    <value>Прізвище</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Тип</value>
   </data>
 </root>
