--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -279,4 +279,13 @@
   <data name="BackToProfile" xml:space="preserve">
     <value>Back to profile</value>
   </data>
+  <data name="Of" xml:space="preserve">
+    <value>of</value>
+  </data>
+  <data name="Page" xml:space="preserve">
+    <value>Page</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
