--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -288,4 +288,37 @@
   <data name="Search" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="AccountsAreAbsent" xml:space="preserve">
+    <value>Accounts are absent</value>
+  </data>
+  <data name="ChooseFile" xml:space="preserve">
+    <value>Choose file</value>
+  </data>
+  <data name="ClientsList" xml:space="preserve">
+    <value>Clients list</value>
+  </data>
+  <data name="ClientsPhotoTitle" xml:space="preserve">
+    <value>Clients photo</value>
+  </data>
+  <data name="Create" xml:space="preserve">
+    <value>Create</value>
+  </data>
+  <data name="FileUpload" xml:space="preserve">
+    <value>Upload file</value>
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="NoPhoto" xml:space="preserve">
+    <value>Client has no photo</value>
+  </data>
+  <data name="UploadClientPhotoTitle" xml:space="preserve">
+    <value>Upload client photo</value>
+  </data>
+  <data name="UploadImage" xml:space="preserve">
+    <value>Upload image</value>
+  </data>
+  <data name="UploadPassportScan" xml:space="preserve">
+    <value>Upload passport scan</value>
+  </data>
 </root>
