--- a/EasyBank/Resources/Resource.ru.resx
+++ b/EasyBank/Resources/Resource.ru.resx
@@ -318,4 +318,13 @@
   <data name="UploadPassportScan" xml:space="preserve">
     <value>Загрузить паспорт</value>
   </data>
+  <data name="AskToDeleteCurrency" xml:space="preserve">
+    <value>Вы уверенны, что хотите удалить валюту?</value>
+  </data>
+  <data name="Currencies" xml:space="preserve">
+    <value>Валюты</value>
+  </data>
+  <data name="CurrencyList" xml:space="preserve">
+    <value>Список валют</value>
+  </data>
 </root>
