--- a/EasyBank/Resources/Resource.ru.resx
+++ b/EasyBank/Resources/Resource.ru.resx
@@ -342,4 +342,10 @@
   <data name="Len10" xml:space="preserve">
     <value>Длина должна быть 10 символов</value>
   </data>
+  <data name="AvailableAmount" xml:space="preserve">
+    <value>Доступная сумма</value>
+  </data>
+  <data name="IsOnlineUser" xml:space="preserve">
+    <value>Пользователь онлайн банкинга</value>
+  </data>
 </root>
