--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -348,4 +348,10 @@
   <data name="WrongFileChoose" xml:space="preserve">
     <value>Wrong input type. Image is expected.</value>
   </data>
+  <data name="WrongLogInForAdminAndOperPage" xml:space="preserve">
+    <value>Only for admins and operators</value>
+  </data>
+  <data name="WrongLogInForClientPage" xml:space="preserve">
+    <value>Only for clients</value>
+  </data>
 </root>
